--- a/src/main/resources/message_zh_CN.properties
+++ b/src/main/resources/message_zh_CN.properties
@@ -1,6 +1,7 @@
-loginname = 登陆名：
-password = 密码：
-submit = 提交
-welcome = 欢迎{0} 访问 月光系统
-title = 登陆页面
-username = 管理员
+loginname = \u767B\u9646\u540D\uFF1A
+password = \u5BC6\u7801\uFF1A
+submit = \u63D0\u4EA4
+welcome = \u6B22\u8FCE{0} \u8BBF\u95EE \u6708\u5149\u7CFB\u7EDF
+title = \u767B\u9646\u9875\u9762
+username = \u7BA1\u7406\u5458
+birthday = \u751F\u65E5
